// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Message /> should render the Message 1`] = `
.c2 {
  margin: 0;
  font-family: Quicksand;
  font-weight: 400;
  font-size: 1rem;
  line-height: 1.5;
  text-align: center;
  margin-bottom: 40px;
  font-size: 18px;
}

.c3 {
  margin: 0;
  font-family: Quicksand;
  font-weight: 400;
  font-size: 1rem;
  line-height: 1.5;
  text-align: center;
  font-size: 18px;
}

.c1 {
  font-size: 18px;
  width: 500px;
  height: 300px;
}

.c0 {
  width: 100%;
  margin-left: auto;
  box-sizing: border-box;
  margin-right: auto;
  display: block;
  padding-left: 16px;
  padding-right: 16px;
}

@media (min-width:600px) {
  .c0 {
    padding-left: 24px;
    padding-right: 24px;
  }
}

@media (min-width:600px) {
  .c0 {
    max-width: 600px;
  }
}

@media (min-width:900px) {
  .c0 {
    max-width: 900px;
  }
}

@media (min-width:1200px) {
  .c0 {
    max-width: 1200px;
  }
}

@media (min-width:1536px) {
  .c0 {
    max-width: 1536px;
  }
}

@media (min-width:1200px) {
  .c0 {
    max-width: 1200px;
  }
}

<div
  class="c0 MuiContainer-root MuiContainer-maxWidthLg MuiContainer-fixed"
>
  <div
    class="c1 MuiBox-root"
  >
    <p
      class="c2 MuiTypography-root MuiTypography-body1 MuiTypography-alignCenter"
      data-testid="text-error"
    >
      <strong />
    </p>
    <p
      class="c3 MuiTypography-root MuiTypography-body1 MuiTypography-alignCenter"
      data-testid="text-default"
    >
      Por favor, verifique sua pesquisa e tente novamente para obter resultados.
    </p>
  </div>
</div>
`;

exports[`<Message /> should to render message content 1`] = `
.c2 {
  margin: 0;
  font-family: Quicksand;
  font-weight: 400;
  font-size: 1rem;
  line-height: 1.5;
  text-align: center;
  margin-bottom: 40px;
  font-size: 18px;
}

.c3 {
  margin: 0;
  font-family: Quicksand;
  font-weight: 400;
  font-size: 1rem;
  line-height: 1.5;
  text-align: center;
  font-size: 18px;
}

.c1 {
  font-size: 18px;
  width: 500px;
  height: 300px;
}

.c0 {
  width: 100%;
  margin-left: auto;
  box-sizing: border-box;
  margin-right: auto;
  display: block;
  padding-left: 16px;
  padding-right: 16px;
}

@media (min-width:600px) {
  .c0 {
    padding-left: 24px;
    padding-right: 24px;
  }
}

@media (min-width:600px) {
  .c0 {
    max-width: 600px;
  }
}

@media (min-width:900px) {
  .c0 {
    max-width: 900px;
  }
}

@media (min-width:1200px) {
  .c0 {
    max-width: 1200px;
  }
}

@media (min-width:1536px) {
  .c0 {
    max-width: 1536px;
  }
}

@media (min-width:1200px) {
  .c0 {
    max-width: 1200px;
  }
}

<div
  class="c0 MuiContainer-root MuiContainer-maxWidthLg MuiContainer-fixed"
>
  <div
    class="c1 MuiBox-root"
  >
    <p
      class="c2 MuiTypography-root MuiTypography-body1 MuiTypography-alignCenter"
      data-testid="text-error"
    >
      <strong>
        A lista de cervejaria não foi encontrada
      </strong>
    </p>
    <p
      class="c3 MuiTypography-root MuiTypography-body1 MuiTypography-alignCenter"
      data-testid="text-default"
    >
      Por favor, verifique sua pesquisa e tente novamente para obter resultados.
    </p>
  </div>
</div>
`;
